--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -6,14 +6,14 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel='stylesheet' href='https://necolas.github.io/normalize.css/5.0.0/normalize.css' />
-    <link rel='stylesheet' href='/css/style.css' />
-
-    <script src="https://use.fontawesome.com/a5c504769b.js"></script>
-    <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
-        crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="/node_modules/modern-normalize/modern-normalize.css" />
+    <link rel="stylesheet" href="/node_modules/materialize-css/dist/css/materialize.min.css">
+    <link rel="stylesheet" href="/css/style.css" />
+    <link rel="stylesheet" href="/node_modules/font-awesome/css/font-awesome.min.css"></link>
+    
+    <script src="/node_modules/jquery/dist/jquery.min.js"></script>
     <script src="/lib/jquery.nicescroll.min.js"></script>
-
+    <script src="/node_modules/materialize-css/dist/js/materialize.min.js"></script>
 </head>
 
 <body>
