--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -17,19 +17,21 @@
 
 <body>
 
-    <nav class="teal">
-        <div class="nav-wrapper">
-            <form action="/songs">
-                <div class="input-field">
-                    <input id="search" type="search" name="title" required>
-                    <label class="label-icon" for="search">
-                        <i class="material-icons">search</i>
-                    </label>
-                    <i class="material-icons">close</i>
-                </div>
-            </form>
-        </div>
-    </nav>
+    <div class="navbar-fixed">
+        <nav class="teal">
+            <div class="nav-wrapper">
+                <form action="/songs">
+                    <div class="input-field">
+                        <input id="search" type="search" name="title" required>
+                        <label class="label-icon" for="search">
+                            <i class="material-icons">search</i>
+                        </label>
+                        <i class="material-icons">close</i>
+                    </div>
+                </form>
+            </div>
+        </nav>
+    </div>
 
     {{{body}}}
 
