Fixed progress bar and made controls visible on load

--- a/views/songs.hbs
+++ b/views/songs.hbs
@@ -78,7 +78,7 @@
 
 <link rel='stylesheet' href='/css/player.css' />
 
-<div class="container no-select" id="controls" style="display:none">
+<div class="container no-select" id="controls">
     <div id="song-info" class="row" hidden>
         <b>
             <span id="track-title">
@@ -116,8 +116,8 @@
 
         <i id="setting-repeat" class="control setting fa fa-fw fa-2x fa-repeat" aria-hidden="true"></i>
 
-        <div class="progress-bar">
-            <div id="song-progress" class="progress"></div>
+        <div class="progress">
+            <div id="song-progress" class="determinate"></div>
         </div>
     </div>
 </div>
