--- a/views/songs.hbs
+++ b/views/songs.hbs
@@ -95,26 +95,27 @@
                 <i class="material-icons" aria-hidden="true">refresh</i>Loading...</span>
         </div>
 
-        {{!--
-        <i id="ctrl-stop" class="control fa fa-fw fa-2x fa-stop" aria-hidden="true"></i>
-        <i id="ctrl-prev" class="control fa fa-fw fa-2x fa-fast-backward" aria-hidden="true"></i>
-        <i id="ctrl-playpause" class="control fa fa-fw fa-2x fa-pause" aria-hidden="true"></i>
-        <i id="ctrl-next" class="control fa fa-fw fa-2x fa-fast-forward" aria-hidden="true"></i> --}}
+        <div class="col s8 offset-s2">
+            <a id="ctrl-prev" class="player-ctrl btn-flat">
+                <i class="material-icons">skip_previous</i>
+            </a>
+            <a id="ctrl-stop" class="player-ctrl btn-flat">
+                <i class="material-icons">stop</i>
+            </a>
+            <a id="ctrl-playpause" class="player-ctrl btn-flat">
+                <i class="material-icons">play_arrow</i>
+            </a>
+            <a id="ctrl-next" class="player-ctrl btn-flat">
+                <i class="material-icons">skip_next</i>
+            </a>
+        </div>
 
-        <a id="ctrl-prev" class="btn-flat">
-            <i class="material-icons">skip_previous</i>
-        </a>
-        <a id="ctrl-stop" class="btn-flat">
-            <i class="material-icons">stop</i>
-        </a>
-        <a id="ctrl-playpause" class="btn-flat">
-            <i class="material-icons">play_arrow</i>
-        </a>
-        <a id="ctrl-next" class="btn-flat">
-            <i class="material-icons">skip_next</i>
-        </a>
+        <div class="col s2">
+            <a id="setting-repeat" class="btn-flat right">
+                <i class="material-icons blue-text">repeat</i>
+            </a>
+        </div>
 
-        <i id="setting-repeat" class="control setting fa fa-fw fa-2x fa-repeat" aria-hidden="true"></i>
 
         <div class="progress">
             <div id="song-progress" class="determinate"></div>
