Oops, that wasn't supposed to be there :P

--- a/views/songs.hbs
+++ b/views/songs.hbs
@@ -78,7 +78,7 @@
 
 <link rel='stylesheet' href='/css/player.css' />
 
-<div class="section z-depth-1 modal-fixed-footer">
+<div class="section z-depth-1">
     <div class="container center-align" id="controls">
         <div id="song-info" class="row" hidden>
             <div class="section">
