Removed old CSS files

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -7,15 +7,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/node_modules/modern-normalize/modern-normalize.css" />
     <link rel="stylesheet" href="/node_modules/materialize-css/dist/css/materialize.min.css">
-    <link rel="stylesheet" href="/node_modules/material-icons/iconfont/material-icons.css"> {{!--
-    <link rel="stylesheet" href="/css/style.css" /> --}} {{!--
-    <link rel="stylesheet" href="/node_modules/font-awesome/css/font-awesome.min.css"></link> --}}
+    <link rel="stylesheet" href="/node_modules/material-icons/iconfont/material-icons.css">
 
     <script src="/node_modules/jquery/dist/jquery.min.js"></script>
 </head>
 
 <body>
-
     <div class="navbar-fixed">
         <nav class="teal">
             <div class="nav-wrapper">
@@ -34,11 +31,7 @@
 
     {{{body}}}
 
-    <script src="/node_modules/materialize-css/dist/js/materialize.min.js"></script> {{!--
-    <script type="text/javascript">
-        $('#toggle-search').click(function () { $('#search').slideToggle(); });
-        $('#navbar').fadeIn(); 
-    </script> --}}
+    <script src="/node_modules/materialize-css/dist/js/materialize.min.js"></script>
 </body>
 
 </html>
