Added button to reload library from home page

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -19,7 +19,14 @@
                     <br> Currently connected to
                     <code>{{songs}}</code> songs.
                 </div>
+
+                <div class="section">
+                    <a class="waves-effect waves-light btn" id="reload-songs">
+                        <i class="material-icons left">refresh</i>Reload library</a>
+                </div>
             </div>
         </div>
     </div>
 </div>
+
+<script src="/js/home.js"></script>
