--- a/views/songs.hbs
+++ b/views/songs.hbs
@@ -50,23 +50,35 @@
 <div class="container" id="songs">
     <div class="row">
         {{#each songs}}
-        <div class="col s12 l6">
+        <div class="col s12">
             <div class="card-panel song" data-id="{{id}}" data-title="{{title}}" data-artist="{{artist}}" data-album="{{album}}">
                 <div class="row valign-wrapper">
-                    <div class="col s4 m3 l4">
+                    <div class="col s4 m3 l2">
                         <img class="circle cover hoverable responsive-img" src="/artwork/{{id}}" alt="Album Artwork">
                     </div>
-                    <div class="col s8 m9 l8">
+                    <div class="col s8 m9 l10">
                         <div class="row">
                             <h5 class="header">{{title}}</h5>
                             <div class="divider"></div>
                             <span class="light">{{artist}} - {{album}}</span>
                         </div>
                         <div class="row">
-                            <a class="waves-effect waves-light btn" onclick="player.playPause({{id}})">
-                                <i class="material-icons left">play_arrow</i>play</a>
-                            <a class="waves-effect waves-light btn">
-                                <i class="material-icons left">favorite</i>favorite</a>
+                            <div class="hide-on-small-only">
+                                <a class="waves-effect waves-light btn" onclick="player.playPause({{id}})">
+                                    <i class="material-icons left">play_arrow</i>play
+                                </a>
+                                <a class="waves-effect waves-light btn">
+                                    <i class="material-icons left">favorite</i>favorite
+                                </a>
+                            </div>
+                            <div class="hide-on-med-and-up">
+                                <a class="waves-effect waves-light btn" onclick="player.playPause({{id}})">
+                                    <i class="material-icons center">play_arrow</i>
+                                </a>
+                                <a class="waves-effect waves-light btn">
+                                    <i class="material-icons center">favorite</i>
+                                </a>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -97,7 +109,7 @@
                     <i class="material-icons" aria-hidden="true">refresh</i>Loading...</span>
             </div>
 
-            <div class="col s8 offset-s2">
+            <div class="col s10 m8 offset-m2">
                 <a id="ctrl-prev" class="player-ctrl btn-flat">
                     <i class="material-icons">skip_previous</i>
                 </a>
