--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -18,7 +18,7 @@
             <div class="nav-wrapper">
                 <form action="/songs">
                     <div class="input-field">
-                        <input id="search" type="search" name="title" required>
+                        <input id="search" type="search" name="q" required>
                         <label class="label-icon" for="search">
                             <i class="material-icons">search</i>
                         </label>
